Fixing UVE body texte size on mobile

--- a/style.css
+++ b/style.css
@@ -1454,6 +1454,26 @@ body {
 
 @media (max-width: 410px) { /* Mobile view */
 
+  #Ehyjv0eCrKCkEqgI {
+        font-size: 20px;
+    }
+    
+    #f77Wnu2sBPXHM5v6 {
+        font-size: 16px;
+    }
+
+ #Qo8UOYvGvn4EZcsQ {
+    font-size:16px;
+  }
+
+  #JizGrqiFn5zQNFsY {
+    font-size:16px;
+    }
+
+  #h86Yiov28iHEcnql {
+    font-size:16px;
+  } 
+
     #sXIeRZyaUsL7nrP2 {
         grid-area: 3 / 5 / 3 / 6;
         position: relative;
